--- a/GUIA06_POO2_AlejandroRodriguez/src/main/webapp/grupos.xhtml
+++ b/GUIA06_POO2_AlejandroRodriguez/src/main/webapp/grupos.xhtml
@@ -49,13 +49,18 @@ and open the template in the editor.
         </style>
     </h:head>
     <h:body>
-        <div class="row col-md-12">
-            <h:link outcome="index" class="btn btn-primary btn-xs" value="Ir a alumnos"/>
-            <h:link outcome="gruposalumnos" class="btn btn-primary btn-xs" value="Ir a asignación de grupos-alumno"/>
-            <h:link outcome="grupos" class="btn btn-primary btn-xs" value="Ir a grupos"/>
-            <h:link outcome="cursos" class="btn btn-primary btn-xs" value="Ir a cursos"/>
-            <h:link outcome="profesores" class="btn btn-primary btn-xs" value="Ir a profesores"/>
-        </div>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">POO II</a>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><h:link outcome="index" value="Alumnos"/></li>
+                    <li><h:link outcome="gruposalumnos" value="Grupos-Alumnos"/></li>
+                    <li class="active"><h:link outcome="grupos" value="Grupos"/></li>
+                    <li><h:link outcome="cursos" value="Cursos"/></li>
+                    <li><h:link outcome="profesores" value="Profesores"/></li>
+                </ul>
+            </div>
+        </nav>
         <div class="row col-md-12">
             <div class="col-md-4 col-xs-4">
                 <div class="panel panel-default">
